--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,8 @@
-# make tmux friendlier
-# last update 3-29-20
+# Make tmux friendlier
+# Last update 2-14-21
 
 # Enable mouse mode
 set -g mouse on
 
 # Set shell
 set-option -g default-shell /bin/bash
-
