--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,5 +4,15 @@
 # Enable mouse mode
 set -g mouse on
 
+# Set vi as default editor
+set -g status-keys vi
+
 # Set shell
 set-option -g default-shell /bin/bash
+
+# Set delay between prefix and command (seconds)
+set -s escape-time 5
+
+# splitting panes with | and -
+bind | split-window -h
+bind - split-window -v
