--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,6 @@ set-option -g default-shell /bin/bash
 # Set delay between prefix and command (seconds)
 set -s escape-time 5
 
-# splitting panes with | and -
+# Split panes with | and -
 bind | split-window -h
 bind - split-window -v
