--- a/.inputrc
+++ b/.inputrc
@@ -1,12 +1,13 @@
-# last update 10/27/18
+# last update 03/15/21
 
-#http://brettterpstra.com/2015/07/09/shell-tricks-inputrc-binding-fun/
+# Sources
+# http://brettterpstra.com/2015/07/09/shell-tricks-inputrc-binding-fun/
 
-#https://www.gnu.org/software/bash/manual/html_node/Readline-Init-File-Syntax.html#Readline-Init-File-Syntax
+# https://www.gnu.org/software/bash/manual/html_node/Readline-Init-File-Syntax.html#Readline-Init-File-Syntax
 
-#http://osxdaily.com/2013/04/24/improve-command-line-history-search/
+# http://osxdaily.com/2013/04/24/improve-command-line-history-search/
 
-#otherwise default is emacs
+# Use vim emulator for programs that use GNU Readline 
 set editing-mode vi 
 
 "\e[A": history-search-backward
@@ -35,5 +36,3 @@ set input-meta on
 set output-meta on
 set show-all-if-ambiguous on
 set visible-stats on
-#set -o vi
-
